Bug 480898 - Once an applet is resized to the horizontal max, can' t resize it back
Summary: Once an applet is resized to the horizontal max, can' t resize it back
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 480763 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-05 14:07 UTC by Jin Liu
Modified: 2024-02-07 08:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2024-02-05 14:07:41 UTC
STEPS TO REPRODUCE
1. Open Kickoff.
2. Drag the right border to the right screen edge.
3. Now you can't drag the right border or corner anymore.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.1
Kernel Version: 6.7.3-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Bug Janitor Service 2024-02-05 16:45:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1050
Comment 2 Nate Graham 2024-02-06 22:15:35 UTC
*** Bug 480763 has been marked as a duplicate of this bug. ***
Comment 3 Marco Martin 2024-02-07 08:40:20 UTC
Git commit c2965a5420366fad66ae3e1d450febb3330f879b by Marco Martin.
Committed on 07/02/2024 at 08:40.
Pushed by mart into branch 'master'.

Don't let applet popups span the whole screen

It's possible to resize some appplets as big as the screen,
and in that case the resize borders get disabled as soon as
they touch the screen edge, with the possibility to lock
the user out from being able to resize the window down again.

Limit the maximum size the use can resize the popup to be 95% of the screen size

M  +17   -1    src/plasmaquick/appletpopup.cpp
M  +1    -0    src/plasmaquick/appletpopup.h

https://invent.kde.org/plasma/libplasma/-/commit/c2965a5420366fad66ae3e1d450febb3330f879b
Comment 4 Marco Martin 2024-02-07 08:41:19 UTC
Git commit cebd2df6b61f03682355cde6c60feb01792559c3 by Marco Martin.
Committed on 07/02/2024 at 08:40.
Pushed by mart into branch 'Plasma/6.0'.

Don't let applet popups span the whole screen

It's possible to resize some appplets as big as the screen,
and in that case the resize borders get disabled as soon as
they touch the screen edge, with the possibility to lock
the user out from being able to resize the window down again.

Limit the maximum size the use can resize the popup to be 95% of the screen size

M  +17   -1    src/plasmaquick/appletpopup.cpp
M  +1    -0    src/plasmaquick/appletpopup.h

https://invent.kde.org/plasma/libplasma/-/commit/cebd2df6b61f03682355cde6c60feb01792559c3