Always keep some borders resizable

It's possible to resize some appplets as big as the screen,
and in that case the resize borders get disabled as soon as
they touch the screen edge, with the possibility to lock
the user out from being able to resize the window down again.

Always enable the border far from the panel, and also both the vertical
borders when the popup is as wide as the screen, as well both horizontal
ones when the popup is as tall as the screen

BUG:480898